# ma

./: README.md  pyproject.toml
edge_skate/: __init__.py  cli.py  course_generation.py  edge_detection.py  export.py  media.py  physics.py  pipeline.py  player.py  preprocessing.py  rendering.py
ios/GameStart/: README.md
ios/GameStart/GameStart/: GameStartApp.swift  StartScreen.swift
ios/GameStart/GameStart/Assets.xcassets/AccentColor.colorset/: Contents.json
samples/: sample_frame.json
tests/: test_pipeline.py  test_player.py
